--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,7 @@ dependencies {
     //Time
     implementation 'joda-time:joda-time:2.12.5'
 
+    // Maps
+    implementation 'com.mapbox.maps:android:10.3.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 }
