--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:24.6.0'
     implementation 'com.google.firebase:firebase-storage-ktx:20.2.0'
     implementation 'com.firebaseui:firebase-ui-storage:8.0.2'
+    implementation 'androidx.browser:browser:1.5.0'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -85,4 +87,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.14.1'
     implementation 'jp.wasabeef:glide-transformations:4.3.0'
     kapt 'com.github.bumptech.glide:compiler:4.14.1'
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 }
